Fix: change some visual features in some components to prepare for shipping dark mode feature
- Remove restrictive styles from <styles.css>
- Change the text in the docs and post component to match with the theme of bootstrap
- Specify the theme in <index.html>

--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -1,9 +1,3 @@
-.header {
-  background-color: aliceblue;
-  transition: box-shadow 0.4s;
-  box-shadow: 0 4px 4px 0 hsla(22, 100%, 8%, 0.2);
-}
-
 .navbar-toggler:focus,
 .navbar-toggler:active {
   outline: none;
